--- a/templates/cdnLibsListItem.html
+++ b/templates/cdnLibsListItem.html
@@ -2,7 +2,8 @@
     <div id="{{libName}}" data-mainfile="{{mainFile}}" style="position:relative;height:30px;">
         <div style="display:inline-block;">
             <span class="blf-lib-name" style="font-size:16px;margin-top:7px;">{{libName}} </span>
-            <span class="blf-lib-version" style="font-size:12px;margin-top:11px;color:#a83838;">({{lastVersion}})</span>
+            <span class="blf-lib-lang" style="font-size:10px;margin-top:13px;">({{libLang}})</span>
+            <span class="blf-lib-version" style="font-size:14px;margin-top:9px;color:#a83838;">({{lastVersion}}) </span>
         </div>
         <div class="blf-lib-buttons" style="display:inline-block;position:absolute;right:20px;">
             <button type="button" class="btn plf-btn-download" style="height:20px;width:20px;margin-top:6px;background:url({{downloadIconPath}}) no-repeat center;background-size:16px 16px;">
