Modularization, refactoring. CDN downloader complete. Translations.

--- a/templates/cdnLibVersionLink.html
+++ b/templates/cdnLibVersionLink.html
@@ -1,1 +1,1 @@
-<span> (<a class="plf-version-link" href="#">{{version}}</a>) </span>
+<span> (<a class="blf-version-link" href="#">{{version}}</a>) </span>
