--- a/templates/cdnLibsHeader.html
+++ b/templates/cdnLibsHeader.html
@@ -1,4 +1,4 @@
 <span>{{title}}</span>
 <form class="blf-filterbox" action="#">
-    <input class="blf-filterinput" type="text" placeholder="{{placeholder}}" style="position:absolute;right:26px;top:20px;">
+    <input class="blf-filterinput" type="text" placeholder="{{placeholder}}">
 </form>
