--- a/templates/cdnLibsList.html
+++ b/templates/cdnLibsList.html
@@ -1,3 +1,3 @@
-<div class="blf-libs-container">
-    <ul id="blf-libs" style="list-style:none;">{{{listItems}}}</ul>
+<div>
+    <ul id="blf-libs">{{{listItems}}}</ul>
 </div>
