--- a/templates/dropArea.html
+++ b/templates/dropArea.html
@@ -1,4 +1,3 @@
-<div id="plf-droparea" style="background-color:#2a2727;border-top:1px solid black;" align="center">{{title}}</br>
-    <div class="plf-dest-dir" style="position:absolute;right:4px;left:4px;bottom:4px;padding:2px 4px 2px 4px;background-color:#3c3838;overflow:hidden;" data-toggle="popover" data-trigger="hover">
-    </div>
+<div id="blf-droparea" align="center">{{title}}</br>
+    <div class="blf-dest-dir" data-toggle="popover" data-trigger="hover"></div>
 </div>
