--- a/templates/cdnLibsListItem.html
+++ b/templates/cdnLibsListItem.html
@@ -12,7 +12,5 @@
             <button type="button" class="btn blf-btn blf-btn-versions" style="background:url({{navIconPath}}) no-repeat center;background-size:16px 16px;"></button>
         </div>
     </div>
-    <div class="blf-lib-versions">
-        {{{versions}}}
-    </div>
+    <div class="blf-lib-versions"></div>
 </li>
