pFSD: modularization -> stylesheet suport.

--- a/src/pFSD/templates/directoryItem.html
+++ b/src/pFSD/templates/directoryItem.html
@@ -1,5 +1,5 @@
-<span><img src="{{iconPath}}" alt="Directorty" style="width:20px;height:20px;"></span>
-<a class="pfsd-dir-link" href="#" data-path= "{{path}}" style="text-decoration:none;color:{{linkColor}}">
+<span><img class="pfsd-dir-img" src="{{iconPath}}" alt="Directorty"></span>
+<a class="pfsd-dir-link" href="#" data-path= "{{path}}" style="color:{{linkColor}}">
     {{baseName}}
 </a>
 </br>
