--- a/src/pFSD/templates/imagePreview.html
+++ b/src/pFSD/templates/imagePreview.html
@@ -1,3 +1,3 @@
-<div id="{{previewId}}" style="position:absolute;z-index:1055;border:2px solid black;border-radius:5px;background-color:#252121;height:158px;opacity:1;">
-    <img src="file://{{path}}" style="height:150px;margin-top:4px;margin-left:4px;margin-right:4px;">
+<div id="{{previewId}}" class="pfsd-img-pre-div">
+    <img class="pfsd-img-preview" src="file://{{path}}">
 </div>
