pFSD: filter box basic, navbar improvements.

--- a/src/pFSD/templates/contents.html
+++ b/src/pFSD/templates/contents.html
@@ -1,5 +1,7 @@
-<section id="pfsd-list">
+<div id="pfsd-list">
     {{{navBar}}}
-    {{{dirUp}}}
-    {{{contents}}}
-</section>
+    <div>
+        {{{dirUp}}}
+        {{{contents}}}
+    </div>
+</div>
