--- a/src/pFSD/styles/styles.css
+++ b/src/pFSD/styles/styles.css
@@ -1,3 +1,8 @@
+#pfsd-navbar {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
 .pfsd-dir-img {
     width:20px;
     height:20px;
@@ -22,4 +27,10 @@
     margin-top:4px;
     margin-left:4px;
     margin-right:4px;
+}
+
+.pfsd-filterinput {
+    position:absolute;
+    right:26px;
+    top:20px;
 }
