--- a/src/pFSD/templates/directoryItem.html
+++ b/src/pFSD/templates/directoryItem.html
@@ -1,5 +1,6 @@
-<span><img class="pfsd-dir-img" src="{{iconPath}}" alt="Directorty"></span>
-<a class="pfsd-dir-link" href="#" data-path= "{{path}}" style="color:{{linkColor}}">
-    {{baseName}}
-</a>
-</br>
+<div class="dir-item" data-basename="{{baseName}}">
+    <span><img class="pfsd-dir-img" src="{{iconPath}}" alt="Directorty"></span>
+    <a class="pfsd-dir-link" href="#" data-path= "{{path}}" style="color:{{linkColor}}">
+        {{baseName}}
+    </a>
+</div>
