--- a/src/pFSD/templates/fileItem.html
+++ b/src/pFSD/templates/fileItem.html
@@ -1,3 +1,4 @@
-<input type="checkbox" name="pfsd-file-checkbox" value="{{baseName}}" data-path="{{path}}">
-<span{{{imageCode}}}>{{baseName}}</span>
-</br>
+<div class="file-item" data-basename="{{baseName}}">
+    <input type="checkbox" name="pfsd-file-checkbox" value="{{baseName}}" data-path="{{path}}">
+    <span{{{imageCode}}}>{{baseName}}</span>
+</div>
