--- a/templates/cdnLibsListItem.html
+++ b/templates/cdnLibsListItem.html
@@ -11,6 +11,12 @@
             <button type="button" class="btn blf-btn blf-btn-link" style="background:url({{linkIconPath}}) no-repeat center;background-size:18px 18px;"></button>
             <button type="button" class="btn blf-btn blf-btn-versions" style="background:url({{navIconPath}}) no-repeat center;background-size:16px 16px;"></button>
         </div>
+        <div class="blf-lib-description">
+            {{libDescription}}</br>
+            Author: {{libAuthor}}</br>
+            <a href="{{libHomepage}}">Homepage</a>
+            <a href="{{libGithub}}">Github</a>
+        </div>
     </div>
     <div class="blf-lib-versions"></div>
 </li>
