--- a/templates/cdnLibFileLink.html
+++ b/templates/cdnLibFileLink.html
@@ -1,1 +1,1 @@
-<span> (<a class="blf-file-link" href="#" data-qfile="{{qfile}}">{{file}}</a>) </span>
+<span>{{{indent}}}<a class="blf-file-link" href="#" data-qfile="{{qfile}}">{{file}}</a></span><br>
