--- a/templates/cdnLibsListItem.html
+++ b/templates/cdnLibsListItem.html
@@ -2,6 +2,7 @@
     <div class="blf-lib-container">
         <div class="blf-lib-info">
             <span class="blf-lib-name"><a class="blf-lib-desc-link" href="#">{{libName}}</a></span><br>
+            <span>Type: {{libType}}</span>&emsp;
             <span class="blf-lib-hits">Hits: {{hits}}</span><br>
             <span class="blf-lib-file">({{libFile}})</span>
             <span class="blf-lib-version">({{libVersion}})</span>
