--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,13 +91,9 @@
     height: 30px;
 }
 
-
-
 .blf-lib-file {
     font-size:14px;
 }
-
-
 
 #blf-back {
     left: 10px;
@@ -112,4 +108,26 @@
 #blf-current-page {
     left: 45px;
     width: 60px;
+}
+
+.blf-loader {
+    border: 16px solid grey;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 60px;
+    height: 60px;
+    margin-top: 120px;
+    margin-left: 235px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
