--- a/templates/cdnNavBar.html
+++ b/templates/cdnNavBar.html
@@ -1,5 +1,5 @@
 
 <button id="blf-back" type="button" class="btn blf-btn-cdn-nav" style="background:url({{backIconPath}}) no-repeat center;background-size:12px 12px;"></button>
-<button id="blf-current-page" type="button" class="btn blf-btn-cdn-nav">{{currentPage}}</button>
+<input id="blf-current-page" class="blf-btn-cdn-nav" type="text" value="{{currentPage}}" maxlength="2">
 <button id="blf-forward" type="button" class="btn blf-btn-cdn-nav" style="background:url({{forwardIconPath}}) no-repeat center;background-size:12px 12px;"></button>
 
