--- a/templates/cdnLibsHeader.html
+++ b/templates/cdnLibsHeader.html
@@ -1,4 +1,5 @@
 <span>{{title}}</span>
 <form class="blf-filterbox" action="#">
     <input class="blf-filterinput" type="text" placeholder="{{placeholder}}">
+    <button type="button" class="btn blf-clear-filterinput" style="background:url({{cancelIconPath}}) no-repeat center;background-size:12px 12px;"></button>
 </form>
