--- a/templates/prefsDialog.html
+++ b/templates/prefsDialog.html
@@ -1,6 +1,6 @@
 <form>
-    <input type="checkbox" name="droparea"> &nbsp&nbsp Show Drop Area<br>
-    <input type="checkbox" name="downloader"> &nbsp&nbsp Show CDN Downloader Context Menu Entry<br>
-    <input type="checkbox" name="filebrowser"> &nbsp&nbsp Enable File Seleccion Dialog on Project Folders<br>
-    <input type="checkbox" name="watcher"> &nbsp&nbsp Enable Project Files Watcher (Bidirectionality)<br>
+    <input type="checkbox" name="droparea"> &nbsp&nbsp {{droparea}}<br>
+    <input type="checkbox" name="downloader"> &nbsp&nbsp {{downloader}}<br>
+    <input type="checkbox" name="filebrowser"> &nbsp&nbsp {{filebrowser}}<br>
+    <input type="checkbox" name="watcher"> &nbsp&nbsp {{watcher}}<br>
 </form>
